modified:   README.md 	modified:   export_presets.cfg 	modified:   project.godot

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,12 +8,11 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../base.apk"
+export_path="../dodge_the_apples_unsigned.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_encryption_key=""
 
 [preset.0.options]
 
@@ -27,28 +26,22 @@ architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-keystore/debug=""
-keystore/debug_user=""
-keystore/debug_password=""
-keystore/release=""
-keystore/release_user=""
-keystore/release_password=""
-version/code=1
+version/code=111
 version/name="1.11"
 package/unique_name="com.ljx.dodgetheapples"
 package/name="躲避林檎"
-package/signed=true
+package/signed=false
 package/app_category=2
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
+package/show_in_android_tv=false
+package/show_in_app_library=true
+package/show_as_launcher_app=false
 launcher_icons/main_192x192="res://art/mainicon.png"
 launcher_icons/adaptive_foreground_432x432="res://art/background.png"
 launcher_icons/adaptive_background_432x432="res://art/background.png"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
-xr_features/hand_tracking=0
-xr_features/hand_tracking_frequency=0
-xr_features/passthrough=0
 screen/immersive_mode=true
 screen/support_small=true
 screen/support_normal=true
@@ -206,6 +199,9 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+xr_features/hand_tracking=0
+xr_features/hand_tracking_frequency=0
+xr_features/passthrough=0
 
 [preset.1]
 
@@ -217,18 +213,17 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../躲避林檎.exe"
+export_path="../dodge_the_apples.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_encryption_key=""
 
 [preset.1.options]
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_script=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -236,9 +231,6 @@ texture_format/etc=false
 texture_format/etc2=false
 binary_format/architecture="x86_64"
 codesign/enable=false
-codesign/identity_type=0
-codesign/identity=""
-codesign/password=""
 codesign/timestamp=true
 codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
@@ -255,6 +247,7 @@ application/product_name="躲避林檎"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
+application/export_angle=0
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
@@ -272,3 +265,4 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+debug/export_console_script=1
