new file:   androiddebugkey_android.keystore 	modified:   export_presets.cfg

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../dodge_the_apples_unsigned.apk"
+export_path="../dodge_the_apples.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
