modified:   export_presets.cfg

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -30,7 +30,7 @@ version/code=111
 version/name="1.11"
 package/unique_name="com.ljx.dodgetheapples"
 package/name="躲避林檎"
-package/signed=false
+package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
