--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,22 +3,29 @@
 name="Android"
 platform="Android"
 runnable=true
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../dodge_the_apples.apk"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
 gradle_build/use_gradle_build=false
+gradle_build/gradle_build_directory=""
+gradle_build/android_source_template=""
+gradle_build/compress_native_libraries=false
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
@@ -40,8 +47,10 @@ package/show_as_launcher_app=false
 launcher_icons/main_192x192="res://art/mainicon.png"
 launcher_icons/adaptive_foreground_432x432="res://art/background.png"
 launcher_icons/adaptive_background_432x432="res://art/background.png"
+launcher_icons/adaptive_monochrome_432x432=""
 graphics/opengl_debug=false
 xr_features/xr_mode=0
+gesture/swipe_to_dismiss=false
 screen/immersive_mode=true
 screen/support_small=true
 screen/support_normal=true
@@ -57,6 +66,7 @@ permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
 permissions/access_location_extra_commands=false
+permissions/access_media_location=false
 permissions/access_mock_location=false
 permissions/access_network_state=false
 permissions/access_surface_flinger=false
@@ -134,6 +144,7 @@ permissions/mount_format_filesystems=false
 permissions/mount_unmount_filesystems=false
 permissions/nfc=false
 permissions/persistent_activity=false
+permissions/post_notifications=false
 permissions/process_outgoing_calls=false
 permissions/read_calendar=false
 permissions/read_call_log=false
@@ -143,6 +154,10 @@ permissions/read_frame_buffer=false
 permissions/read_history_bookmarks=false
 permissions/read_input_state=false
 permissions/read_logs=false
+permissions/read_media_audio=false
+permissions/read_media_images=false
+permissions/read_media_video=false
+permissions/read_media_visual_user_selected=false
 permissions/read_phone_state=false
 permissions/read_profile=false
 permissions/read_sms=false
@@ -202,67 +217,3 @@ permissions/write_user_dictionary=false
 xr_features/hand_tracking=0
 xr_features/hand_tracking_frequency=0
 xr_features/passthrough=0
-
-[preset.1]
-
-name="Windows Desktop"
-platform="Windows Desktop"
-runnable=true
-dedicated_server=false
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="../dodge_the_apples.exe"
-encryption_include_filters=""
-encryption_exclude_filters=""
-encrypt_pck=false
-encrypt_directory=false
-
-[preset.1.options]
-
-custom_template/debug=""
-custom_template/release=""
-debug/export_console_wrapper=0
-binary_format/embed_pck=true
-texture_format/bptc=true
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-binary_format/architecture="x86_64"
-codesign/enable=false
-codesign/timestamp=true
-codesign/timestamp_server_url=""
-codesign/digest_algorithm=1
-codesign/description=""
-codesign/custom_options=PackedStringArray()
-application/modify_resources=true
-application/icon="res://art/icon.ico"
-application/console_wrapper_icon="res://art/icon.ico"
-application/icon_interpolation=4
-application/file_version="1.11.0.0"
-application/product_version="1.11.0.0"
-application/company_name="NM$L"
-application/product_name="躲避林檎"
-application/file_description=""
-application/copyright=""
-application/trademarks=""
-application/export_angle=0
-ssh_remote_deploy/enabled=false
-ssh_remote_deploy/host="user@host_ip"
-ssh_remote_deploy/port="22"
-ssh_remote_deploy/extra_args_ssh=""
-ssh_remote_deploy/extra_args_scp=""
-ssh_remote_deploy/run_script="Expand-Archive -LiteralPath '{temp_dir}\\{archive_name}' -DestinationPath '{temp_dir}'
-$action = New-ScheduledTaskAction -Execute '{temp_dir}\\{exe_name}' -Argument '{cmd_args}'
-$trigger = New-ScheduledTaskTrigger -Once -At 00:00
-$settings = New-ScheduledTaskSettingsSet
-$task = New-ScheduledTask -Action $action -Trigger $trigger -Settings $settings
-Register-ScheduledTask godot_remote_debug -InputObject $task -Force:$true
-Start-ScheduledTask -TaskName godot_remote_debug
-while (Get-ScheduledTask -TaskName godot_remote_debug | ? State -eq running) { Start-Sleep -Milliseconds 100 }
-Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue"
-ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
-Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
-Remove-Item -Recurse -Force '{temp_dir}'"
-debug/export_console_script=1
